[gd_scene load_steps=10 format=3 uid="uid://c86exeql0vhpm"]

[ext_resource type="Theme" uid="uid://bcb0fhoal7q0d" path="res://assets/themes/theme.tres" id="1_grkqx"]
[ext_resource type="Script" path="res://scenes/game/ui/menus/pause_menu.gd" id="2_xy8m6"]
[ext_resource type="PackedScene" uid="uid://bna3a48kkq3bh" path="res://scenes/game/ui/menus/menu_components/options_menu_options.tscn" id="3_doxm7"]

[sub_resource type="Animation" id="Animation_nlu0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OptionsMenu:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 288)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PauseMenu:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 288)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("OptionsMenu:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 288)]
}

[sub_resource type="Animation" id="Animation_tfb56"]
resource_name = "hide_options"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(512, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector2(-512, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l4mn5"]
resource_name = "pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0, -288), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OptionsMenu:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 288)]
}

[sub_resource type="Animation" id="Animation_g38tc"]
resource_name = "show_options"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(-512, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector2(512, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jcvks"]
resource_name = "unpause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -288)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwk64"]
_data = {
"RESET": SubResource("Animation_nlu0l"),
"hide_options": SubResource("Animation_tfb56"),
"pause": SubResource("Animation_l4mn5"),
"show_options": SubResource("Animation_g38tc"),
"unpause": SubResource("Animation_jcvks")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_grkqx")
script = ExtResource("2_xy8m6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="PauseMenu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacingLabelStart" type="Label" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="PauseMenu" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacingLabelStart" type="Label" parent="PauseMenu/PauseMenu"]
layout_mode = 2

[node name="Paused" type="Label" parent="PauseMenu/PauseMenu"]
layout_mode = 2
size_flags_vertical = 0
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/PauseMenu"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Options")
text = "Resume"

[node name="Options" type="Button" parent="PauseMenu/PauseMenu"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
text = "Options
"

[node name="MainMenu" type="Button" parent="PauseMenu/PauseMenu"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Resume")
text = "Main Menu
"

[node name="SpacingLabelEnd" type="Label" parent="PauseMenu/PauseMenu"]
layout_mode = 2
size_flags_vertical = 10

[node name="SpacingLabelEnd" type="Label" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="OptionsMenu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_right = 1024.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacingLabelStart" type="Label" parent="OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="options_menu_options" parent="OptionsMenu" instance=ExtResource("3_doxm7")]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacingLabelEnd" type="Label" parent="OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_lwk64")
}

[connection signal="pressed" from="PauseMenu/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/PauseMenu/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="return_to_menu" from="OptionsMenu/options_menu_options" to="." method="_on_options_menu_options_return_to_menu"]
